--- a/style.css
+++ b/style.css
@@ -4,12 +4,11 @@
     font-family: 'Roboto';
     font-style: normal;
 }
-.block-left {
-    margin: 0px;
-    padding: 0px;
-}
+
 .block-right {
-    margin-left: 40px;}
+    margin-left: 40px;
+}
+
 .box {
     height: 448px;
     width: 430px;
@@ -17,6 +16,7 @@
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 6px;
 }
+
 .box2 {
     height: 448px;
     width: 430px;
@@ -24,6 +24,7 @@
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 6px;
 }
+
 .txt1 {
     padding: 28px 0px 0px 45px;
     font: 600 16px 'Roboto';
@@ -47,15 +48,12 @@
     height: 2px;
     width: 100%;
     margin-top: 23px;
-    /*
-    margin-bottom: 29px;
-    */
 }
 
 .img {
     background-image: url(./img/Group\ 2294.png);
-    Width: 365px;
-    Height: 197px;
+    width: 365px;
+    height: 197px;
     margin: 18px 0px 0px 29px;
 }
 
@@ -89,15 +87,12 @@
     height: 8px;
     margin: 44px 0px 0px 13px;
 }
+
 .hr2 {
     height: 2px;
     width: 100%;
     background-color: #468fd7;
     margin-top: 27px;
-}
-
-.block {
-    display: flex;
 }
 
 .img5 {
@@ -107,34 +102,41 @@
     width: 278px;
 
 }
-.img6{
+
+.img6 {
     background-image: url(./img/Rectangle\ 1339\ \(1\).png);
     margin: 33px 0px 0px 13px;
     height: 8px;
     width: 21px;
 
 }
-.txt5{
+
+.txt5 {
     font: 400 12px 'Inter';
 }
-.position1{
-     margin: 29px 0px 0px 9px;
+
+.position1 {
+    margin: 29px 0px 0px 9px;
 }
-.img7{
+
+.img7 {
     background-image: url(./img/Rectangle\ 1339\ \(2\).png);
     height: 8px;
     width: 21px;
     margin: 17px 0px 0px 13px;
 }
-.position2{
+
+.position2 {
     margin: 17px 0px 0px 9px;
 }
-.img8{
+
+.img8 {
     background-image: url(./img/Rectangle\ 1340.png);
     height: 8px;
     width: 21px;
     margin: 17px 0px 0px 13px;
 }
+
 .color-black {
     color: black;
 }
